other/b-d/docker-socket-requires-label/99-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: docker-socket-check
