other/b-d/docker-socket-requires-label/podcontrollers-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        allow-docker: "false"
        app: busybox
    spec:
      containers:
      - image: busybox:1.35
        name: busybox
      volumes:
      - name: docker-vol
        hostPath:
          path: "/var/run/docker.sock"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.35
        name: busybox
      volumes:
      - name: docker-vol
        hostPath:
          path: "/var/run/docker.sock"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            allow-docker: "false"
            app: busybox
        spec:
          containers:
          - image: busybox:1.35
            name: busybox
          volumes:
          - name: docker-vol
            hostPath:
              path: "/var/run/docker.sock"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: busybox
        spec:
          containers:
          - image: busybox:1.35
            name: busybox
          volumes:
          - name: docker-vol
            hostPath:
              path: "/var/run/docker.sock"
          restartPolicy: OnFailure
