other/b-d/docker-socket-requires-label/pods-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    allow-docker: "true"
  name: goodpod02
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    allow-docker: "false"
  name: goodpod03
spec:
  containers:
    - image: busybox:1.35
      name: busybox
  volumes:
  - name: foo-vol
    hostPath:
      path: "/var/foo/bar"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    allow-docker: "true"
  name: goodpod04
spec:
  containers:
    - image: busybox:1.35
      name: busybox
  volumes:
  - name: foo-vol
    hostPath:
      path: "/var/foo/bar"
  - name: docker-vol
    hostPath:
      path: "/var/run/docker.sock"
