other/b-d/docker-socket-requires-label/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: docker-socket-check
status:
  ready: true
