other/b-d/docker-socket-requires-label/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: docker-socket-check
policies:
- docker-socket-requires-label.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: docker-socket-check
  resources:
  - nginx-bad-1
  - nginx-bad-2
  result: fail
  rule: conditional-anchor-dockersock
- kind: Pod
  policy: docker-socket-check
  resources:
  - nginx-allow-2
  result: pass
  rule: conditional-anchor-dockersock
- kind: Pod
  policy: docker-socket-check
  resources:
  - nginx-allow-1
  - nginx-allow-3
  result: skip
  rule: conditional-anchor-dockersock
